make 'rtmp' the gdb-branch

--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,3 +1,8 @@
 [DEFAULT]
 pristine-tar = True
 
+[buildpackage]
+# the default branch for upstream sources
+upstream-branch = upstream
+# the default branch for the debian branch
+debian-branch = rtmp
